--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
+    "@tanstack/react-query-devtools": "^5.62.2",
     "@types/node": "^22.10.1",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
