--- a/client/package.json
+++ b/client/package.json
@@ -11,19 +11,19 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
-    "@tanstack/react-query": "^5.62.1",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "@tanstack/react-query": "^5.64.1",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
-    "react-router": "^7.0.2",
+    "react-router": "^7.1.1",
     "zod": "^3.24.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
-    "@tanstack/react-query-devtools": "^5.62.2",
+    "@tanstack/react-query-devtools": "^5.64.1",
     "@types/node": "^22.10.1",
-    "@types/react": "^18.3.12",
-    "@types/react-dom": "^18.3.1",
+    "@types/react": "^19.0.6",
+    "@types/react-dom": "^19.0.3",
     "@vitejs/plugin-react": "^4.3.4",
     "clsx": "^2.1.1",
     "eslint": "^9.15.0",
@@ -31,7 +31,7 @@
     "eslint-plugin-react-refresh": "^0.4.14",
     "globals": "^15.12.0",
     "sass": "^1.81.0",
-    "typescript": "~5.6.2",
+    "typescript": "^5.7.3",
     "typescript-eslint": "^8.15.0",
     "vite": "^6.0.1"
   }
